# aoc-2023

./: .gitignore
haskell/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Downloader.hs  haskell.cabal
haskell/inputs/: 10.txt  test.txt
rust/: Cargo.toml
rust/.cargo/: config
rust/src/: lib.rs  main.rs
