cabal-version:      2.4
name:               haskell
version:            0.1.0.0

synopsis: Advent of Code 2023 solutions.

description: Haskell solutions for Advent of Code 2023.

common day
    build-depends:
        base ^>=4.17,
        containers,
        split,
        array,
        bytestring,
        binary,
    default-language: Haskell2010

executable load
    main-is: Downloader.hs
    build-depends: base, containers, bytestring, directory, filepath, http-conduit, http-types

executable 01
    import: day
    main-is: Day01.hs
